--- a/html/index.html
+++ b/html/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elatar</title>
     <!--Render All Elemetns Normally-->
-    <link rel="stylesheet" href="D:\Eid-Hassan\challenges\template-two\Template-Two\css\normalize.css" />
+    <link rel="stylesheet" href="D:\Projects\Template-Two\css\normalize.css" />
     <!-- Font Awesome-->
-    <link rel="stylesheet" href="D:\Eid-Hassan\challenges\template-two\Template-Two\css\all.min.css" />
+    <link rel="stylesheet" href="D:\Projects\Template-Two\css\all.min.css" />
     <!--main template css files-->
-    <link rel="stylesheet" href="D:\Eid-Hassan\challenges\template-two\Template-Two\css\template.css" />
+    <link rel="stylesheet" href="D:\Projects\Template-Two\css\template.css" />
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
     <header>
         <div class="container">
             <a href="#" class="Logo">
-                <img src="D:\Eid-Hassan\challenges\template-two\Template-Two\img\download.jpg" alt="Logo">
+                <img src="D:\Projects\Template-Two\img\download.jpg" alt="Logo">
             </a>
             <nav>
                 <i class="fas fa-bars toggle-menu"></i>
@@ -128,7 +128,7 @@
     <!----------------------------- Start Diesing --------------------------->
     <div class="diesing">
         <div class="image">
-            <img src="D:\Eid-Hassan\challenges\template-two\Template-Two\img\mobil-iphon3.jpg" alt="mobil">
+            <img src="D:\Projects\Template-Two\img\mobil-iphon3.jpg" alt="mobil">
         </div>
         <div class="text">
             <h2>Our Diesing Comes With...</h2>
@@ -164,64 +164,56 @@
         </div>
         <div class="images">
             <div class="box">
-                <img src="D:\Eid-Hassan\challenges\template-two\Template-Two\img\download (1).jpg" width="800px"
-                    height="300px" alt="photo">
+                <img src="D:\Projects\Template-Two\img\download (1).jpg" width="800px" height="300px" alt="photo">
                 <div class="caption">
                     <h4>Awesome Image</h4>
                     <p>Photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="D:\Eid-Hassan\challenges\template-two\Template-Two\img\download (2).jpg" width="800px"
-                    height="300px" alt="photo">
+                <img src="D:\Projects\Template-Two\img\download (2).jpg" width="800px" height="300px" alt="photo">
                 <div class="caption">
                     <h4>Awesome Image</h4>
                     <p>Photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="D:\Eid-Hassan\challenges\template-two\Template-Two\img\download (3).jpg" width="800px"
-                    height="300px" alt="photo">
+                <img src="D:\Projects\Template-Two\img\download (3).jpg" width="800px" height="300px" alt="photo">
                 <div class="caption">
                     <h4>Awesome Image</h4>
                     <p>Photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="D:\Eid-Hassan\challenges\template-two\Template-Two\img\download (4).jpg" width="800px"
-                    height="300px" alt="photo">
+                <img src="D:\Projects\Template-Two\img\download (4).jpg" width="800px" height="300px" alt="photo">
                 <div class="caption">
                     <h4>Awesome Image</h4>
                     <p>Photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="D:\Eid-Hassan\challenges\template-two\Template-Two\img\download (5).jpg" width="800px"
-                    height="300px" alt="photo">
+                <img src="D:\Projects\Template-Two\img\download (5).jpg" width="800px" height="300px" alt="photo">
                 <div class="caption">
                     <h4>Awesome Image</h4>
                     <p>Photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="D:\Eid-Hassan\challenges\template-two\Template-Two\img\download (6).jpg" width="800px"
-                    height="300px" alt="photo">
+                <img src="D:\Projects\Template-Two\img\download (6).jpg" width="800px" height="300px" alt="photo">
                 <div class="caption">
                     <h4>Awesome Image</h4>
                     <p>Photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="D:\Eid-Hassan\challenges\template-two\Template-Two\img\download (7).jpg" width="800px"
-                    height="300px" alt="photo">
+                <img src="D:\Projects\Template-Two\img\download (7).jpg" width="800px" height="300px" alt="photo">
                 <div class="caption">
                     <h4>Awesome Image</h4>
                     <p>Photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="D:\Eid-Hassan\challenges\template-two\Template-Two\img\download (8).jpg" width="800px"
-                    height="300px" alt="photo">
+                <img src="D:\Projects\Template-Two\img\download (8).jpg" width="800px" height="300px" alt="photo">
                 <div class="caption">
                     <h4>Awesome Image</h4>
                     <p>Photography</p>
@@ -237,9 +229,7 @@
     <!----------------------------- Start Video ---------------------------->
     <div class="video">
         <video autoplay muted loop width="100%">
-            <source
-                src="D:\Eid-Hassan\challenges\template-two\Template-Two\img\WhatsApp Video 2021-05-02 at 3.06.48 AM.mp4"
-                type="video/mp4">
+            <source src="D:\Projects\Template-Two\img\WhatsApp Video 2021-05-02 at 3.06.48 AM.mp4" type="video/mp4">
         </video>
         <div class="text">
             <h2>Supper Awesome Video Here</h2>
@@ -259,7 +249,7 @@
                 <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet tincidunts
                 </p>
             </div>
-            <img src="D:\Eid-Hassan\challenges\template-two\Template-Two\img\mobil2.jpg" />
+            <img src="D:\Projects\Template-Two\img\mobil2.jpg" />
         </div>
     </div>
     <!-------------------------- End About --------------------------------->
@@ -304,7 +294,7 @@
                 <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet tincidunts
                 </p>
                 <div class="content">
-                    <img src="D:\Eid-Hassan\challenges\template-two\Template-Two\img\images-child3.jpg" alt="child">
+                    <img src="D:\Projects\Template-Two\img\images-child3.jpg" alt="child">
                     <div class="text">
                         Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
                         tincidunts
@@ -312,7 +302,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <img src="D:\Eid-Hassan\challenges\template-two\Template-Two\img\images-child1.jpg" alt="">
+                    <img src="D:\Projects\Template-Two\img\images-child1.jpg" alt="">
                     <div class="text">
                         Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
                         tincidunts
@@ -510,7 +500,7 @@
     <!---------------------------- Start Footer ------------------------------->
     <div class="footer">
         <div class="container">
-            <img src="D:\Eid-Hassan\challenges\template-two\Template-Two\img\download.jpg" alt="Logo">
+            <img src="D:\Projects\Template-Two\img\download.jpg" alt="Logo">
             <p>We Are Social</p>
             <div class="social-icons">
                 <i class="fab fa-facebook-f"></i>
