--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elatar</title>
+    <link rel="stylesheet" href="D:\Projects\html\test.css">
 </head>
 <body>
-    <img src="D:\Projects\WhatsApp Image 2021-10-28 at 1.08.39 PM.jpeg" alt="">
-    <div font-size="80px">mohamed sayed </div>
+  <div class="parent">
+    <div class="one">1</div>
+    <div class="two">2</div>
+    <div class="three">3</div>
+    <div class="four">4</div>
+  </div>
 </body>
 </html>
