--- a/html/index.html
+++ b/html/index.html
@@ -41,6 +41,7 @@
         <!------------------------------ End Header --------------------------->
         <!------------------------------ Start Landing ------------------------->
         <div class="landing" id="landing">
+            <span class="up">Up</span>
             <div class="overlay">
                 <div class="text">
                     <div class="content">
