Upload More Image

--- a/html/index.html
+++ b/html/index.html
@@ -131,69 +131,303 @@
                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet tincidunts
                     </p>
                 </div>
-                <ul class="shuffle">
-                    <li class="active">All</li>
-                    <li>App</li>
-                    <li>Photo</li>
-                    <li>Web</li>
-                    <li>Print</li>
+                <ul class="shuffle tabs">
+                    <li data-cont=".one" class="active">All</li>
+                    <li data-cont=".two">App</li>
+                    <li data-cont=".three">Photo</li>
+                    <li data-cont=".foure">Web</li>
+                    <li data-cont=".five">Print</li>
                 </ul>
             </div>
-            <div class="images">
-                <div class="box">
-                    <img src="../img/download (1).jpg" width="800px" height="300px" alt="photo">
-                    <div class="caption">
-                        <h4>Awesome Image</h4>
-                        <p>Photography</p>
+            <div class="content">
+                <div class="images one">
+                    <div class="box">
+                        <img src="../img/download (1).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/download (2).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/download (3).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/download (4).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/download (5).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/download (6).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/download (7).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/download (8).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
                     </div>
                 </div>
-                <div class="box">
-                    <img src="../img/download (2).jpg" width="800px" height="300px" alt="photo">
-                    <div class="caption">
-                        <h4>Awesome Image</h4>
-                        <p>Photography</p>
+                <div class="images two">
+                    <div class="box">
+                        <img src="../img/App.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/App1.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/App2.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/App3.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/App5.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/App6.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/App7.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/App8.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
                     </div>
                 </div>
-                <div class="box">
-                    <img src="../img/download (3).jpg" width="800px" height="300px" alt="photo">
-                    <div class="caption">
-                        <h4>Awesome Image</h4>
-                        <p>Photography</p>
+                <div class="images three">
+                    <div class="box">
+                        <img src="../img/download (1).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/download (2).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/download (3).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/download (4).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/download (5).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/download (6).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/download (7).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/download (8).jpg" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
                     </div>
                 </div>
-                <div class="box">
-                    <img src="../img/download (4).jpg" width="800px" height="300px" alt="photo">
-                    <div class="caption">
-                        <h4>Awesome Image</h4>
-                        <p>Photography</p>
+                <div class="images foure">
+                    <div class="box">
+                        <img src="../img/web1.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/web2.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/web3.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/web4.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/web5.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/web6.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/web7.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/web8.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
                     </div>
                 </div>
-                <div class="box">
-                    <img src="../img/download (5).jpg" width="800px" height="300px" alt="photo">
-                    <div class="caption">
-                        <h4>Awesome Image</h4>
-                        <p>Photography</p>
+                <div class="images five">
+                    <div class="box">
+                        <img src="../img/print1.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
                     </div>
-                </div>
-                <div class="box">
-                    <img src="../img/download (6).jpg" width="800px" height="300px" alt="photo">
-                    <div class="caption">
-                        <h4>Awesome Image</h4>
-                        <p>Photography</p>
+                    <div class="box">
+                        <img src="../img/print2.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
                     </div>
-                </div>
-                <div class="box">
-                    <img src="../img/download (7).jpg" width="800px" height="300px" alt="photo">
-                    <div class="caption">
-                        <h4>Awesome Image</h4>
-                        <p>Photography</p>
+                    <div class="box">
+                        <img src="../img/print3.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
                     </div>
-                </div>
-                <div class="box">
-                    <img src="../img/download (8).jpg" width="800px" height="300px" alt="photo">
-                    <div class="caption">
-                        <h4>Awesome Image</h4>
-                        <p>Photography</p>
+                    <div class="box">
+                        <img src="../img/print4.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/print5.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/print6.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/print7.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="../img/print8.png" width="800px" height="300px" alt="photo">
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
                     </div>
                 </div>
             </div>
