--- a/html/index.html
+++ b/html/index.html
@@ -132,73 +132,15 @@
                     </p>
                 </div>
                 <ul class="shuffle tabs">
-                    <li data-cont=".one" class="active">All</li>
-                    <li data-cont=".two">App</li>
-                    <li data-cont=".three">Photo</li>
-                    <li data-cont=".foure">Web</li>
-                    <li data-cont=".five">Print</li>
+                    <li data-cont=".all" class="active">All</li>
+                    <li data-cont=".app">App</li>
+                    <li data-cont=".photo">Photo</li>
+                    <li data-cont=".web">Web</li>
+                    <li data-cont=".print">Print</li>
                 </ul>
             </div>
             <div class="content">
-                <div class="images one">
-                    <div class="box">
-                        <img src="../img/download (1).jpg" width="800px" height="300px" alt="photo">
-                        <div class="caption">
-                            <h4>Awesome Image</h4>
-                            <p>Photography</p>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <img src="../img/download (2).jpg" width="800px" height="300px" alt="photo">
-                        <div class="caption">
-                            <h4>Awesome Image</h4>
-                            <p>Photography</p>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <img src="../img/download (3).jpg" width="800px" height="300px" alt="photo">
-                        <div class="caption">
-                            <h4>Awesome Image</h4>
-                            <p>Photography</p>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <img src="../img/download (4).jpg" width="800px" height="300px" alt="photo">
-                        <div class="caption">
-                            <h4>Awesome Image</h4>
-                            <p>Photography</p>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <img src="../img/download (5).jpg" width="800px" height="300px" alt="photo">
-                        <div class="caption">
-                            <h4>Awesome Image</h4>
-                            <p>Photography</p>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <img src="../img/download (6).jpg" width="800px" height="300px" alt="photo">
-                        <div class="caption">
-                            <h4>Awesome Image</h4>
-                            <p>Photography</p>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <img src="../img/download (7).jpg" width="800px" height="300px" alt="photo">
-                        <div class="caption">
-                            <h4>Awesome Image</h4>
-                            <p>Photography</p>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <img src="../img/download (8).jpg" width="800px" height="300px" alt="photo">
-                        <div class="caption">
-                            <h4>Awesome Image</h4>
-                            <p>Photography</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="images two">
+                <div class="images all app">
                     <div class="box">
                         <img src="../img/App.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
@@ -256,7 +198,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="images three">
+                <div class="images all photo">
                     <div class="box">
                         <img src="../img/download (1).jpg" width="800px" height="300px" alt="photo">
                         <div class="caption">
@@ -314,7 +256,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="images foure">
+                <div class="images all web">
                     <div class="box">
                         <img src="../img/web1.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
@@ -372,7 +314,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="images five">
+                <div class="images all print">
                     <div class="box">
                         <img src="../img/print1.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
