--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
         <!------------------------------ End Header --------------------------->
         <!------------------------------ Start Landing ------------------------->
         <div class="landing" id="landing">
-            <span class="up">Up</span>
+            <span class="up opcity">Up</span>
             <div class="overlay">
                 <div class="text">
                     <div class="content">
@@ -53,14 +53,6 @@
                     </div>
                 </div>
             </div>
-            <i id="prev" class="fas fa-angle-left change-background fa-2x"></i>
-            <i id="next" class="fas fa-angle-right change-background fa-2x"></i>
-            <span id="land-ul"></span>
-            <ul class="bullets" id="">
-                <li></li>
-                <li class="active"></li>
-                <li></li>
-            </ul>
         </div>
         <!------------------------------ End Landing --------------------------->
         <!----------------------------- Start Services ------------------------->
@@ -132,11 +124,11 @@
                     </p>
                 </div>
                 <ul class="shuffle tabs">
-                    <li data-cont=".all" class="active">All</li>
-                    <li data-cont=".app">App</li>
+                    <li data-cont=".app" class="active">App</li>
                     <li data-cont=".photo">Photo</li>
                     <li data-cont=".web">Web</li>
                     <li data-cont=".print">Print</li>
+                    <li data-cont=".all">All</li>
                 </ul>
             </div>
             <div class="content">
